# gluttonous

./: .gitignore  .pdm-python  CLAUDE.md  DATA_COLLECTION_STATUS.json  README.md  api_test_output.txt  back_510880.ipynb  backtest_2025.py  backtest_avg_1.ipynb  backtest_max_1.ipynb  backtest_stock_max_1.ipynb  backtest_v5.py  daily.py  mount.sh  on_recv.py  onrecvtest.ipynb  pyproject.toml  roll_test.ipynb  str_fund_max_1.py  test.ipynb  tmp.txt
.claude/: settings.local.json
.claude/skills/: README.md  archive.md  backtest.md  collect.md  compare.md  review.md  train.md  validate.md
.github/: copilot-instructions.md  skills.md
.github/skills/: backtest.md  clean.md  train.md  validate.md
archive/: README.md  backtest_stock_02.ipynb  stock_on_recv.py  str_fund_max_1.py
archive/v0.0/: README.md  check.py
archive/v0.2/: README.md  best_model.pt  daily_values.csv  report.json  trades.csv
archive/v0.3/: README.md  backtest_v5_report.md  plot_backtest.py  requirements.txt
backtest/stock-2025/: backtest_v2.py  prepare_data_v2.py
backups/: config_baseline_20260118_123855.py
docs/: CLEANUP_SUMMARY.md  EXPERIMENT_FRAMEWORK.md  EXTENDED_API_REPORT.md  LSTM_FRAMEWORK_MIGRATION.md  OPTIMIZATION_SYSTEM_v0.4.md  QUICKSTART_LSTM.md  REFACTORING_SUMMARY.md  SAMPLE_WEIGHT_OPTIMIZATION.md  SKILLS_MIGRATION.md  TRAILING_STOP_OPTIMIZATION.md
ml/: README.md  backtest.py  train.py
pipeline/: __init__.py
python/: test.ipynb
scripts/: archive_strategy.py  install_startup.bat  load_env.sh  start_daily_task.bat
src/: __init__.py
utils/: gm.py  qq_bot.py  sub_list.py
(+101 files in other folders)
